--- a/assets/css/scrollBar.css
+++ b/assets/css/scrollBar.css
@@ -3,19 +3,19 @@
 }
 
 ::-webkit-scrollbar-track {
-	background: var(--black);
+	background: var(--color-black);
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--white);
+	background: var(--color-white);
 	border-radius: 10px;
-	border: 3px solid var(--black);
+	border: 3px solid var(--color-black);
 	transition: filter 0.3s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
 	@apply saturate-200;
-	background: var(--white);
+	background: var(--color-white);
 }
 
 body::-webkit-scrollbar {
@@ -23,22 +23,22 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
-	background: var(--black);
+	background: var(--color-black);
 }
 
 body::-webkit-scrollbar-thumb {
-	background: var(--white);
+	background: var(--color-white);
 	border-radius: 10px;
-	border: 3px solid var(--black);
+	border: 3px solid var(--color-black);
 	transition: filter 0.3s;
 }
 
 body::-webkit-scrollbar-thumb:hover {
 	@apply saturate-200;
-	background: var(--white);
+	background: var(--color-white);
 }
 
 body {
 	scrollbar-width: thin;
-	scrollbar-color: var(--white);
+	scrollbar-color: var(--color-white);
 }
