--- a/assets/css/scrollBar.css
+++ b/assets/css/scrollBar.css
@@ -1,3 +1,4 @@
+/* WebKit-based browsers */
 ::-webkit-scrollbar {
 	width: 12px;
 }
@@ -7,38 +8,18 @@
 }
 
 ::-webkit-scrollbar-thumb {
-	background: var(--color-white);
+	background: var(--color-yellow);
 	border-radius: 10px;
 	border: 3px solid var(--color-black);
 	transition: filter 0.3s;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-	@apply saturate-200;
-	background: var(--color-white);
+	filter: saturate(3);
 }
 
-body::-webkit-scrollbar {
-	width: 12px;
-}
-
-body::-webkit-scrollbar-track {
-	background: var(--color-black);
-}
-
-body::-webkit-scrollbar-thumb {
-	background: var(--color-white);
-	border-radius: 10px;
-	border: 3px solid var(--color-black);
-	transition: filter 0.3s;
-}
-
-body::-webkit-scrollbar-thumb:hover {
-	@apply saturate-200;
-	background: var(--color-white);
-}
-
+/* Firefox */
 body {
 	scrollbar-width: thin;
-	scrollbar-color: var(--color-white);
+	scrollbar-color: var(--color-yellow) var(--color-black);
 }
