--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,10 @@ html {
 	--shadow-custom: 4px 4px 10px rgba(0, 0, 0, 0.25);
 }
 
+.container-custom {
+	@apply w-full mx-auto px-2 sm:px-3 md:px-5 lg:px-7 xl:px-15 max-w-[2560px];
+}
+
 ::selection {
 	background-color: var(--color-black);
 	color: var(--color-white);
