--- a/assets/css/transition.css
+++ b/assets/css/transition.css
@@ -24,6 +24,10 @@
     animation: waveLeave 2s cubic-bezier(0.25, 0.1, 0.25, 1) forwards;
 }
 
+.wave-pause {
+    animation-play-state: paused;
+}
+
 @keyframes waveEnter {
     0% { transform: translateY(-100%); }
     100% { transform: translateY(-20%); }
