--- a/assets/css/scrollBar.css
+++ b/assets/css/scrollBar.css
@@ -25,3 +25,9 @@
 ::-webkit-scrollbar-button {
 	display: none;
 }
+
+/* Marquer automatiquement les éléments comme scrollables */
+[data-scrollable="true"] {
+	overflow-y: auto;
+	overscroll-behavior: contain;
+}
