--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,6 +42,13 @@ html {
 @theme {
 	--color-black: #222222;
 	--color-white: #f8f8f8;
+	--color-white5: rgba(248, 248, 248, 0.05);
+	--color-white10: rgba(248, 248, 248, 0.1);
+	--color-white20: rgba(248, 248, 248, 0.2);
+	--color-white30: rgba(248, 248, 248, 0.3);
+	--color-white50: rgba(248, 248, 248, 0.5);
+	--color-white70: rgba(248, 248, 248, 0.7);
+	--color-white80: rgba(248, 248, 248, 0.8);
 	--color-grayDark: #4d4d4d;
 	--color-yellow: #fff083;
 	--color-yellowDark: rgba(100, 94, 40, 0.7);
